# dmri-explorer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  contributing.md  fetch_third_party.sh  install.sh
.github/workflows/: generate_doc.yml  main.yml
Engine/: CMakeLists.txt
Engine/include/: application.h  application_state.h  argument_parser.h  binding.h  camera.h  command_line.h  coordinate_system.h  data.h  draw_elements_indirect_command.h  eigen.hpp  global_state.h  gpudata.h  grid_model.h  gui.h  image.h  loader.h  model.h  mouse_state.h  mt_field.h  mvc_controller.h  mvc_model.h  mvc_view.h  nii_volume.h  options.h  scalar_model.h  scalar_view.h  scene.h  sh_field.h  sh_model.h  sh_view.h  shader.h  shader_data.h  sphere.h  spherical_coordinates.h  spherical_harmonic.h  st_field.h  tensor_model.h  tensor_view.h  texture.h  timer.h  (+2 more)
Engine/shaders/: compute.glsl  constant.fun  legendre.fun  mtfield_frag.glsl  mtfield_vert.glsl  shfield_comp.glsl  shfield_frag.glsl  shfield_normals_comp.glsl  shfield_radiis_comp.glsl  shfield_vert.glsl  shnormals_comp.glsl  shradiis_comp.glsl  sph_harm.fun  stfield_frag.glsl  stfield_vert.glsl  texture_frag.glsl  texture_vert.glsl  triangle-fs.glsl  triangle-vs.glsl  triangle.frag  triangle.vert
Engine/shaders/include/: camera_util.glsl  color_maps.glsl  frag_util.glsl  orthogrid_util.glsl  shfield_util.glsl  sphere_util.glsl  vert_util.glsl
Engine/src/: application.cpp  application_state.cpp  argument_parser.cpp  camera.cpp  coordinate_system.cpp  data.cpp  gpudata.cpp  grid_model.cpp  gui.cpp  image.cpp  loader.cpp  main.cpp  matrix.cpp  model.cpp  mouse_state.cpp  mt_field.cpp  mvc_controller.cpp  mvc_model.cpp  mvc_view.cpp  options.cpp  scalar_model.cpp  scalar_view.cpp  scene.cpp  sh_field.cpp  sh_model.cpp  sh_view.cpp  shader.cpp  shader_data.cpp  sphere.cpp  spherical_coordinates.cpp  spherical_harmonic.cpp  st_field.cpp  tensor_model.cpp  tensor_view.cpp  texture.cpp  timer.cpp  user_application.cpp
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
third/glfw3/installed/x64-linux/debug/lib/pkgconfig/: glfw3.pc
third/nifti_clib/: CMakeLists.txt
third/vcpkg-export-20210512-131839/installed/vcpkg/info/: glfw3_3.3.3_x64-linux.list  glm_0.9.9.8_x64-linux.list
third/vcpkg-export-20210512-131839/installed/x64-linux/lib/pkgconfig/: glfw3.pc
third/vcpkg-export-20210512-131839/installed/x64-linux/share/glfw3/: glfw3Targets.cmake  vcpkg_abi_info.txt
third/vcpkg-export-20210512-131839/installed/x64-linux/share/glm/: glm-config.cmake  vcpkg_abi_info.txt
